create_game_shop

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Shop - A sua loja de games</title>
+    <title>Game Shop</title>
     <link rel="stylesheet" href="./main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,11 +30,11 @@
         <div class="container">
             <img class="store_front" src="./images/loja.jpg" alt="Fachada da loja de games">
             <div>
-                <h2>Sobre a loja</h2>
+                <h2 class="sobre_a_loja">Sobre a loja</h2>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat nisi distinctio aliquid dolorem culpa dolorum suscipit saepe inventore reprehenderit, nobis deserunt perspiciatis pariatur corrupti? Voluptatum ex deleniti perferendis quis molestias!
                 </p>
-                <p>
+                <p class="mg_b">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat nisi distinctio aliquid dolorem culpa dolorum suscipit saepe inventore reprehenderit, nobis deserunt perspiciatis pariatur corrupti? Voluptatum ex deleniti perferendis quis molestias!
                 </p>
                 <ul class="brands_list">
@@ -61,7 +61,7 @@
                 </div>
                 <div>
                     <div>
-                        <h3>Nos acompanhe</h3>
+                        <h3 class="nos_acompanhe">Nos acompanhe</h3>
                         <ul class="social_links">
                             <li>
                                 <a href="#" title="Siga-nos no Instagram">
@@ -83,7 +83,7 @@
                 </div>
                 <div>
                     <div>
-                        <h3>Venha até nós</h3>
+                        <h3 class="venha_ate_nos">Venha até nós</h3>
                         <p>
                             Rua Javascript n 124, Vila HTML - São Paulo - SP
                         </p>
